# DIO.me

./: .gitattributes  .gitignore  README.md
DIO.me/Projetos/04 - Python - Desenvolvendo sua Primeira API com FastAPI/WorkOutAPI/: Makefile  alembic.ini  pyproject.toml
DIO.me/Projetos/04 - Python - Desenvolvendo sua Primeira API com FastAPI/WorkOutAPI/alembic/: env.py
DIO.me/Projetos/04 - Python - Desenvolvendo sua Primeira API com FastAPI/WorkOutAPI/api/atleta/: models.py  schemas.py
DIO.me/Projetos/04 - Python - Desenvolvendo sua Primeira API com FastAPI/WorkOutAPI/api/categoria/: schemas.py
DIO.me/Projetos/04 - Python - Desenvolvendo sua Primeira API com FastAPI/WorkOutAPI/api/centro_treinamento/: schemas.py
DIO.me/Projetos/04 - Python - Desenvolvendo sua Primeira API com FastAPI/WorkOutAPI/api/configs/: database.py  settings.py
DIO.me/Projetos/04 - Python - Desenvolvendo sua Primeira API com FastAPI/WorkOutAPI/api/contrib/: dependencies.py  models.py  schemas.py
DIO.me/Projetos/05 - Python - Desenvolvendo uma API com FastAPI Utilizando TDD/StoreAPI/: Makefile  pyproject.toml
DIO.me/Projetos/05 - Python - Desenvolvendo uma API com FastAPI Utilizando TDD/StoreAPI/store/: main.py
DIO.me/Projetos/05 - Python - Desenvolvendo uma API com FastAPI Utilizando TDD/StoreAPI/store/core/: __init__.py  config.py
DIO.me/Projetos/05 - Python - Desenvolvendo uma API com FastAPI Utilizando TDD/StoreAPI/store/database/: mongo.py
DIO.me/Projetos/05 - Python - Desenvolvendo uma API com FastAPI Utilizando TDD/StoreAPI/tests/: conftest.py
(+1024 files in other folders)
