[tool.poetry]
name = "WorkOutAPI"
version = "0.0.1"
description = "Projeto: Desenvolvendo sua Primeira API com FastAPI"
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.111.0"
uvicorn = "0.30.1"
sqlalchemy = "2.0.30"
pydantic = "2.7.4"
alembic = "1.13.1"
asyncpg = "0.29.0"
psycopg2 = "2.9.9"
pydantic-settings = "2.3.2"
fastapi-pagination = "0.12.25"
python-dotenv = "1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
